--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,11 +2,8 @@
     "compilerOptions": {
         "target": "es5",
         "lib": [
-            "es2015",
-            "es2016",
-            "es6",
-            "es7",
-            "dom"
+            "dom",
+            "es2018"
         ],
         "module": "commonjs",
         "moduleResolution": "node",
