--- a/package.json
+++ b/package.json
@@ -17,27 +17,27 @@
     },
     "dependencies": {
         "@paperbits/common": "0.1.169",
-        "@simonwep/pickr": "^1.4.5",
-        "cropperjs": "^1.4.0",
-        "google-maps": "^3.2.1",
-        "jss": "^9.8.7",
-        "jss-preset-default": "^4.5.0",
-        "knockout": "^3.5.0-beta",
-        "knockout.validation": "^2.0.3",
-        "lity": "^2.3.0",
-        "lodash": "^4.17.4",
-        "mime-types": "^2.1.22",
-        "opentype.js": "0.11.0",
-        "perfect-scrollbar": "^1.2.0",
-        "xhr2": "^0.1.4"
+        "@simonwep/pickr": "^1.4.7",
+        "cropperjs": "^1.5.6",
+        "google-maps": "^3.3.0",
+        "jss": "^10.0.0",
+        "jss-preset-default": "^10.0.0",
+        "knockout": "^3.5.1",
+        "knockout.validation": "^2.0.4",
+        "lity": "^2.4.0",
+        "lodash": "^4.17.15",
+        "mime-types": "^2.1.24",
+        "opentype.js": "1.1.0",
+        "perfect-scrollbar": "^1.4.0",
+        "xhr2": "^0.2.0"
     },
     "devDependencies": {
-        "@types/google-maps": "^3.2.0",
-        "@types/knockout": "^3.4.53",
-        "@types/knockout.mapping": "^2.0.33",
-        "@types/knockout.validation": "0.0.36",
-        "@types/lodash": "^4.14.74",
-        "@types/node": "8.5.5",
+        "@types/google-maps": "^3.2.1",
+        "@types/knockout": "^3.4.66",
+        "@types/knockout.mapping": "^2.0.35",
+        "@types/knockout.validation": "0.0.37",
+        "@types/lodash": "^4.14.146",
+        "@types/node": "12.12.6",
         "@types/signals": "1.0.1"
     }
 }
