--- a/package.json
+++ b/package.json
@@ -17,25 +17,18 @@
     },
     "dependencies": {
         "@paperbits/common": "0.1.322",
-        "@simonwep/pickr": "^1.7.1",
-        "cropperjs": "^1.5.6",
-        "google-maps": "^3.3.0",
-        "jss": "^10.0.0",
-        "jss-preset-default": "^10.0.0",
+        "@simonwep/pickr": "^1.7.4",
+        "jss": "^10.4.0",
+        "jss-preset-default": "^10.4.0",
         "knockout": "^3.5.1",
         "knockout.validation": "^2.0.4",
-        "lodash": "^4.17.15",
-        "mime-types": "^2.1.24",
-        "opentype.js": "1.1.0",
-        "perfect-scrollbar": "^1.4.0",
-        "xhr2": "^0.2.0"
+        "lodash": "^4.17.20",
+        "mime-types": "^2.1.27",
+        "opentype.js": "1.3.3"
     },
     "devDependencies": {
-        "@types/google-maps": "^3.2.1",
         "@types/knockout.mapping": "^2.0.35",
         "@types/knockout.validation": "0.0.37",
-        "@types/lodash": "^4.14.146",
-        "@types/node": "12.12.6",
-        "@types/signals": "1.0.1"
+        "@types/lodash": "^4.14.161"
     }
 }
